style.css
body {
    background-image: url("./assets/images/golfCourse.jpeg");
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100%;
}

#main-header {
    margin-top: 35px;
    text-align: center;
    font-size: 60px;
    font-weight: bold;
    font-family: 'Oswald', sans-serif;
}

h2 {
    text-align: center;
    font-size: 65px;
    font-weight: bold;
    font-family: 'Oswald', sans-serif;
}

h3 {
    text-align: center;
    font-size: 25px;
    font-weight: bold;
    font-family: 'Oswald', sans-serif;
}

h4 {
    text-align: center;
    font-family: 'Oswald', sans-serif;
}

h5 {
    text-align: center;
    font-family: 'Oswald', sans-serif;
}

#bio {
    text-align: center;
    font-size: 30px;
    font-family: 'Oswald', sans-serif;
    color: black;
}

#avatar-image {
    border-radius: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 35px;
    margin-top: 35px;
    
}

/* This is where we change the background color */
/* .portfolio-projects {
    background-color: black;
    width: 100%
} */

.contact-container {
    background-color: gray;
    width: 100%;
}


.header {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

.about-button, .portfolio-button,
.resume-button, .contact-button {
    font-size: 20px;
    color: black;
    padding: 50px;
}

#down-arrow {
    height: 45px;
    width: 45px;
    border-radius: 50%;
}

#up-arrow {
    height: 45px;
    width: 45px;
    border-radius: 50%;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

#line {
    border-bottom: solid;
    margin-left: auto;
    margin-right: auto;
    width: 900px;
    padding-top: 30px;
}

.portfolio-wrapper {
    padding-top: 60px;
}

.portfolio-image{

    float: left;
    margin: 10px;
    margin-left: 35px;
    margin-right: 35px;
    text-align: center;
    
}

#portfolio-link {
    color: black;
    /* font-weight: bolder; */
    /* box-shadow: 0 3px 6px #999, 0 3px 6px #999; */
    font-family: 'Oswald', sans-serif;
    font-weight: bold;

}

#port-img {
    border-radius: 50%;
    border-style: solid;
}

a {
    text-decoration: none;
    font-family: 'Oswald', sans-serif;
    font-weight: bold;
}


#contact-header {
    clear: both;
    padding-top: 60px;
    font-size: 65px;
    padding-bottom: 50px;
    color: white;
}

#say-thanks, #contact-info {
    text-align: center;
    font-size: 20px;
    font-weight: bold;
    padding-top: 20px;
    color: white;
    font-family: 'Oswald', sans-serif;
}

#contact-info {
    padding-bottom: 15px;
}

#feedback-box {
    margin-left: auto;
    margin-right: auto;
    display: block;
    margin-bottom: 5px;
    width: 250px;
    height: 20px;
}

#submit-button {
   margin-left: auto;
   margin-right: auto;
   display: block;
   margin-bottom: 25px;
}

.contact-icons {
    text-align: center;
	color: #d3d3d3;
    font-size: 12px; 
}

a.fa-github-square {

    width: 52px;
    text-align:center;
}

a.fa-facebook-square {

    width: 52px;
    text-align:center;
}

a.fa-linkedin-square {

    width: 52px;
    text-align:center;
}

.txt-rotate {
    font-family: 'Oswald', sans-serif;
    font-weight: bold;
}

#resume-header {
    clear: both;
    padding-top: 70px;
    font-size: 65px;
    padding-bottom: 70px;
}

#portfolio-header {
    padding-top: 70px;
    font-size: 65px;
    padding-bottom: 30px;
}

#certification-img, #highschool-img,
#yl-img {
    border-radius: 50%;
    border-style: solid;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#high-school {
    padding-top: 30px;
    font-family: 'Oswald', sans-serif;
}

#work-header {
    padding-top: 35px;
    font-family: 'Oswald', sans-serif;
}

#work-year, #college-school-year,
#high-school-year {
    text-align: center;
    font-family: 'Oswald', sans-serif;
}

#contact-info {
    text-align: center;
    font-family: 'Oswald', sans-serif;
}

.feedback-form {
    width: 500px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    color: black;
    font-family: 'Oswald', sans-serif;
    padding-bottom: 50px;
}

#education-header {
    font-size: 40px;
    padding-bottom: 15px;
    text-decoration: underline;
    padding-bottom: 45px;
}

#work-header {
    font-size: 40px;
    padding-bottom: 15px;
    text-decoration: underline;
    padding-top: 50px;
    padding-bottom: 25px;
}

#education-school {
    color: #ca0714;
}

#high-school {
    color: #6a4088
}

/* Iphone X */
@media screen and (max-width: 375px) {

    body {
        background-image: url("./assets/images/golfCourse.jpeg");
        background-repeat: no-repeat;
        background-attachment: fixed;
        background-size: 100%;
        width: 375px;
        
    }

    #avatar-image {
        display: block;
        margin-left: 40px;
        margin-right: auto;
    }

    #main-header {
        padding-left: 30px;
    }

    #bio {
        margin-left: 5px;
    }

    #portfolio-header {
        margin-left: 15px;
    }

    .portfolio-image {
        margin-left: 15px;
    }

    .txt-rotate {
        margin-left: 10px;
    }

    .feedback-form {
        width: 300px;
    }

    .contact-container {
        width: 375px;
    }


}

